新增数据格式处理

--- a/hlp/chat/config/ini/seq2seq.ini
+++ b/hlp/chat/config/ini/seq2seq.ini
@@ -2,9 +2,9 @@
 mode = train
 seq_data = data/seq.data
 train_data = checkpoint/seq2seq
-resource_data = data/xiaohuangji50w_nofenci.conv
-e = E
-m = M
+resource_data = data/data.conv
+start = E
+end = M
 
 [ints]
 enc_vocab_size = 20000
